fix css of login form on small devices

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -99,7 +99,8 @@
   width: 100%
 
 .center-container
-  width: 380px
+  max-width: 380px
+  padding: 15px
   margin: 80px auto
   border-radius: 2px
   display: block
@@ -127,12 +128,6 @@
   margin-top: -5px
   width: 30px
   height: 30px
-
-.signin-form
-  padding: 30px
-  background: #fff
-  display: block
-  position: relative
 
 .btn-file
   position: relative
@@ -184,7 +179,8 @@
   color: #ffffff
 
 .signin-form
-  padding: 30px
+  padding: 15px
+  background: #fff
   display: block
   position: relative
 
